----------------------------------------------------------------------
 OmegaT 5.4.0
----------------------------------------------------------------------
  2 Enhancements
  4 Bug fixes
  0 Localisation updates
----------------------------------------------------------------------
5.4.0 vs 5.3.0

  Implemented requests:

  - Sync file deletions from repository to project
  https://sourceforge.net/p/omegat/feature-requests/1499/

  - Show branding in About dialog
  https://sourceforge.net/p/omegat/feature-requests/1511/

  Bug fixes:

  - Cannot create new team project in bare repository
  https://sourceforge.net/p/omegat/bugs/1005/

  - Leading whitespace not trimmed in HTML filter
  https://sourceforge.net/p/omegat/bugs/1006/

  - HTML filter whitespace handling errors
  https://sourceforge.net/p/omegat/bugs/1007/

  - Project Files table does not respect LAF colors
  https://sourceforge.net/p/omegat/bugs/1016/

----------------------------------------------------------------------
 OmegaT 5.3.0 (2020-08-03)
----------------------------------------------------------------------
  6 Enhancements
  9 Bug fixes
  10 Localisation updates
----------------------------------------------------------------------
5.3.0 vs 5.2.0

  Implemented requests:

  - Display concordance hits from auto/enforce TMX files first
  https://sourceforge.net/p/omegat/feature-requests/1283/

  - Support reading metadata from plugins and display in UI
  https://sourceforge.net/p/omegat/feature-requests/1434/

  - Add a "file" type to repository type
  https://sourceforge.net/p/omegat/feature-requests/1446/

  - Configurable Fuzzy Matches Threshold
  https://sourceforge.net/p/omegat/feature-requests/1450/

  - Mozilla .ftl files filter
  https://sourceforge.net/p/omegat/feature-requests/1479/

  - Support Yandex.Cloud machine translation
  https://sourceforge.net/p/omegat/feature-requests/1494/

  Bug fixes:

  - application_startup event could fail to execute scripts