@@ -1407,6 +1407,8 @@ XLIFF_OPTIONS_36_ONLY=The following options do not apply if "Compatibility with 
 XLIFF_OPTIONS_FORCE2F=&Force shortcut to "f" for <it pos="end"> tags
 XLIFF_OPTIONS_IGNORE4PH=&Ignore type and ctype attributes when building <ph> tag shortcuts
 XLIFF_OPTIONS_IGNORE4BPT=Ignore type and ctype attributes when building <&bpt> and <ept> tag shortcuts
+XLIFF_OPTIONS_STATE=Specify state attribute handling behavior
+XLIFF_OPTION_CHANGE_TARGET_STATE_NEEDS_REVIEW_T9N=Change to "needs-review-translation" instead of "translated"
 
 # org.omegat.filters3.xml.openxml.OpenXMLFilter
 
